src/styles/index.css
* {
  box-sizing: border-box;
  margin: 0;
  border-color: var(--theme-border-color);
}

/* Global focus outline reset */
*:focus:not(:focus-visible) {
  outline: none;
}

/* Firefox */
* {
  scrollbar-color: var(--theme-dim-light) transparent;
}

/* Webkit */
/* Make scrollbars transparent except for main page scrollbar. */
::-webkit-scrollbar,
::-webkit-scrollbar-track {
  background-color: transparent;
}

body::-webkit-scrollbar,
body::-webkit-scrollbar-track {
  background: var(--theme-bg);
}

::-webkit-scrollbar-thumb {
  background-color: var(--theme-dim-light);
  border: 4px solid transparent;
  background-clip: content-box;
  border-radius: 10px;
}

@media (prefers-reduced-motion: no-preference) {
  :root {
    scroll-behavior: smooth;
  }
}

/*
	Ensure that the auto-hiding/showing address bar on iOS Safari
	always has a background color matching our theme.
*/
html {
  background: var(--theme-bg-gradient-bottom);
}

body {
  color: var(--theme-text);
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  font-family: var(--font-body) !important;
  max-width: 100%;
  background: var(--theme-bg);
}

.content > section {
  max-width: 1000px;
}

a {
  color: var(--theme-link);
  text-decoration: none;
}

a:hover,
a:focus-visible {
  color: var(--theme-accent);
}

a:focus {
  outline: 2px solid currentColor;
  outline-offset: 0.25em;
}

a:focus-visible {
  outline: 2px solid var(--theme-accent);
  outline-offset: 0px;
  border-radius: 2px;
}

nav ul {
  list-style: none;
  padding: 0;
  line-height: 1.5;
}

.content > section > * + *,
.content > section > blockquote > * + *,
.content > section > :is(ul, ol) > li > * + *,
.content details > * + *,
.content * > astro-slot > * + * {
  margin-top: 1.25rem;
}

.content > section > :is(ul, ol) > li > * + * {
  margin-bottom: 1.25rem;
}

.content > section > :is(ul, ol) > li,
.content > section > :is(ul, ol) > li > * + *,
.content > section > :is(ul, ol) > li > :is(ul, ol) > li,
.content > section > :is(ul, ol) > li > :is(ul, ol) > li > * + * {
  margin-top: 0.5rem;
}

.content > section > :first-child {
  margin-top: 0;
}

.content > section > :is(ul, ol),
.content > section > :is(ul, ol) :is(ul, ol) {
  padding-inline-start: 1.5em;
}

:is(h1, h2, h3, h4, h5, h6) + *,
.content > section > .heading-wrapper + * {
  margin-top: 0;
}

:is(h2):not(:first-child),
.heading-wrapper:not(:first-child):is(.level-h2) {
  margin-top: 4rem;
}

:is(h3, h4):not(:first-child),
.heading-wrapper:not(:first-child):is(.level-h3, .level-h4) {
  margin-top: 3rem;
}

:is(h5, h6):not(:first-child),
.heading-wrapper:not(:first-child):is(.level-h5, .level-h6) {
  margin-top: 2rem;
}

:is(h1, h2, h3, h4, h5, h6, .heading-wrapper)
  + :is(h1, h2, h3, h4, h5, h6, .heading-wrapper):not(:first-child) {
  margin-top: 0;
}

.heading-wrapper {
  --icon-size-x: 2rem;
  --icon-size-y: 1.875rem;
  margin-inline-end: var(--icon-size-x);
}

.heading-wrapper:not(:first-child) {
  margin-block: 0;
}

.heading-wrapper > * {
  display: inline;
  margin-bottom: 0;
}

.heading-wrapper > .anchor-link {
  position: relative;
  display: inline-flex;
  margin-inline-end: calc(-1 * var(--icon-size-x));
  width: var(--icon-size-x);
  height: var(--icon-size-y);
  color: var(--theme-text-secondary);
  text-decoration: none;
  justify-content: center;
  vertical-align: baseline;
  z-index: 10;
}

/* Float anchor links to the left of headings on larger screens. */
@media (min-width: 50em) {
  .heading-wrapper {
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-end;
    align-items: baseline;
    margin-inline-start: calc(-1 * var(--icon-size-x));
  }

  .heading-wrapper > .anchor-link {
    margin-inline-end: 0;
  }
}

.heading-wrapper > .anchor-link {
  opacity: 0.5;
}

@media (hover: hover) {
  .heading-wrapper > .anchor-link {
    opacity: 0;
  }
}

.heading-wrapper:hover > .anchor-link,
.anchor-link:focus {
  opacity: 1;
}

.content {
  line-height: 1.5;
}

article > section li > :is(p, pre, .expressive-code, blockquote):not(:first-child) {
  margin-top: 1rem;
}

article > section ::marker {
  font-weight: bold;
  color: var(--theme-text-secondary);
}

article > section iframe {
  width: 80%;
  height: auto;
  aspect-ratio: 16 / 9;
  border: none;
  display: block;
  margin: 1em auto;
}

a > code {
  position: relative;
  color: var(--theme-text-accent);
  text-underline-offset: var(--padding-block);
}

strong {
  font-weight: 600;
  color: inherit;
}

/* Supporting Content */
code {
  --border-radius: 3px;
  --padding-block: 0.2rem;
  font-family: var(--font-mono);
  font-size: 0.85em;
  background-color: var(--theme-code-inline-bg);
  margin: calc(var(--padding-block) * -1) 0;
  border-radius: var(--border-radius);
  word-break: break-word;
}

pre > code {
  display: inline-block;
  padding: 15px 10px;
  width: 100%;
  background-color: transparent;
}

.content kbd {
  font-family: var(--font-body);
  font-size: 0.9375rem;
  border-radius: 0.25rem;
  padding: 0.0625rem 0.375rem;
  border: 1px solid var(--theme-shade-subtle);
  box-shadow: 0 2px var(--theme-shade-subtle);
  background-color: var(--theme-bg-offset);
  white-space: nowrap;
}

.theme-dark .content kbd {
  border-color: var(--theme-divider);
  background-color: var(--theme-divider);
}

.theme-dark g#logo {
  fill: white;
}

thead {
  font-family: var(--font-body);
  text-transform: uppercase;
  font-size: small;
  color: #4a5568;
  font-weight: 100;
}

.theme-dark thead {
  color: #a0aec0;
}

table {
  width: 100%;
  padding: var(--padding-block) 0;
  margin: 0;
  border-collapse: separate;
  line-height: 1.8;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
}

th {
  font-weight: bold;
}

td,
th {
  padding: 12px;
  text-align: start;
  border-bottom-width: 1px;
  border-bottom-style: solid;
}

tbody tr:last-child td,
tbody tr:last-child th {
  border-bottom: none;
}

blockquote code {
  background-color: var(--theme-bg);
}
/* ... */

